fixed new harvest
