# server-src/controllers/HarvestController.ts
@@ -6,6 +6,9 @@ import {HarvestRepository} from '../repositories/HarvestRepository';
 import {IHarvest, Harvest, IHarvestVm} from '../models/Harvest';
 import {INewHarvestParams} from '../models/requests/index.requests';
 import {genSalt, hash} from 'bcryptjs';
+import {IEntry, Entry} from '../models/Entry';
+import {IEntryRepository} from '../repositories/IEntryRepository';
+import {EntryRepository} from '../repositories/EntryRepository';
 
 @Route('harvests')
 export class HarvestController extends Controller {
@@ -18,6 +21,7 @@ export class HarvestController extends Controller {
     }
 
     private readonly _harvestRepository: IHarvestRepository = new HarvestRepository(Harvest);
+    private readonly _entryRepository: IEntryRepository = new EntryRepository(Entry);
 
     /**
      *
@@ -29,8 +33,15 @@ export class HarvestController extends Controller {
     public async registerHarvest(@Body() newHarvestParams: INewHarvestParams): Promise<IHarvestVm> {
 
         const newHarvest: IHarvest = new Harvest();
-        newHarvest.entries = newHarvestParams.entries;
         newHarvest.farm = newHarvestParams.farm;
+
+        newHarvestParams.entries.forEach(async (entry) => {
+           const newEntry: IEntry = new Entry();
+           newEntry.pounds = entry.pounds;
+
+           const savedEntry: IEntry = await this._entryRepository.createEntry(newEntry);
+           newHarvest.entries.push(savedEntry._id);
+        });
 
         return await <IHarvestVm>this._harvestRepository.createHarvest(newHarvest);
     }
@@ -38,12 +49,11 @@ export class HarvestController extends Controller {
     /**
      *
      * @param {string} username
-     * @returns {Promise<IHarvestVm>}
+     * @returns {Promise<IHarvestVm[]>}
      */
     @Get('getAll')
     @Tags('Harvest')
-    public async getAll(): Promise<IHarvestVm> {
-        const result: IHarvest = await this._harvestRepository.findAll();
-        return <IHarvestVm>result;
+    public async getAll(): Promise<IHarvestVm[]> {
+        return await <IHarvestVm[]>this._harvestRepository.findAll();
     }
 }
