# server-src/models/requests/INewEntryParams.ts
@@ -1,11 +1,9 @@
 export interface INewEntryParams {
-    crop: string;
     pounds: number;
-    priceTotal: number;
-    harvester: string;
-    comments: string;
-    farm: string;
-    recipient: string;
-    createdOn: Date;
-    updatedOn: Date;
+    crop?: string;
+    priceTotal?: number;
+    harvester?: string;
+    comments?: string;
+    farm?: string;
+    recipient?: string;
 }
